fix java lang imports